// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://github.com/EricTweeds/Bespoke-Front-End-Project"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Repo
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://github.com/EricTweeds/Bespoke-Front-End-Project"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Repo
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://github.com/EricTweeds/Bespoke-Front-End-Project"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Repo
</a>
`;
